force-app/main/default/objects/Service_Catalog_Business_Rule__c/Service_Catalog_Business_Rule__c.object-meta.xml
<CustomObject>
    <label>Service Catalog Business Rule</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Catalog Business Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>