force-app/main/default/objects/Service_Catalog_Business_Rule__c/fields/Compare_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Compare_Field_API_Name__c</fullName>
    <label>Compare Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>