force-app/main/default/objects/Service_Catalog_Business_Rule__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <label>Default Value</label>
    <length>250</length>
    <type>Text</type>
</CustomField>