force-app/main/default/objects/Service_Catalog_Business_Rule__c/fields/Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Api_Name__c</fullName>
    <label>Field Api Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>