force-app/main/default/objects/Service_Catalog_Business_Rule__c/fields/ServiceCatalog__c.field-meta.xml
<CustomField>
    <fullName>ServiceCatalog__c</fullName>
    <label>ServiceCatalog</label>
    <referenceTo>Service_Catalog__c</referenceTo>
    <relationshipLabel>Business Rules</relationshipLabel>
    <relationshipName>Service_Catalog_Validations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>