force-app/main/default/objects/Service_Catalog_Business_Rule__c/fields/sObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>sObjectAPIName__c</fullName>
    <label>sObjectAPIName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>